quorum/test/tests/other/Pass/ConstantPrimitives.quorum
/*
Expected output:
1
2.0
3
true
4
5.0
6
false
*/

class Main
    constant integer a = 1
    constant number b = 2.0
    constant text c = "3"
    constant boolean d = true

    action Main
        constant integer e = 4
        constant number f = 5.0
        constant text g = "6"
        constant boolean h = false

        print a
        print b
        print c
        print d
        print e
        print f
        print g
        print h
    end
end